finish match-check

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
       <img class="barbarian" src="img/card-back.jpg" alt="" />
       <img class="castle" src="img/card-back.jpg" alt="" />
       <img class="damsel" src="img/card-back.jpg" alt="" />
-      <img class="dragon edge" src="img/card-back.jpg" alt="" />
+      <img class="dragon" src="img/card-back.jpg" alt="" />
       <img class="knight" src="img/card-back.jpg" alt="" />
-      <img class="barbarian1" src="img/card-back.jpg" alt="" />
-      <img class="dragon1" src="img/card-back.jpg" alt="" />
-      <img class="wizard edge" src="img/card-back.jpg" alt="" />
-      <img class="knight1" src="img/card-back.jpg" alt="" />
-      <img class="damsel1" src="img/card-back.jpg" alt="" />
+      <img class="barbarian" src="img/card-back.jpg" alt="" />
+      <img class="dragon" src="img/card-back.jpg" alt="" />
       <img class="wizard" src="img/card-back.jpg" alt="" />
-      <img class="castle1 edge" src="img/card-back.jpg" alt="" />
+      <img class="knight" src="img/card-back.jpg" alt="" />
+      <img class="damsel" src="img/card-back.jpg" alt="" />
+      <img class="wizard" src="img/card-back.jpg" alt="" />
+      <img class="castle" src="img/card-back.jpg" alt="" />
     </div>
 
     <script src="js/jquery.js"></script>
