completed header and footer

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link rel="stylesheet" href="css/main.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
+
+    <header>
+      <h1>Dragon Memory</h1>
+      <h4>Test you memory in an all out battle of medieval cards!</h4>
+    </header>
     <div class="wrapper">
       <img class="barbarian" src="img/card-back.jpg" alt="" />
       <img class="castle" src="img/card-back.jpg" alt="" />
@@ -19,6 +24,10 @@
       <img class="wizard" src="img/card-back.jpg" alt="" />
       <img class="castle" src="img/card-back.jpg" alt="" />
     </div>
+    
+    <footer>
+      <h4>Designed by Landon West and David Woolf</h4>
+    </footer>
 
     <script src="js/jquery.js"></script>
     <script src="js/main.js"></script>
